@@ -1,5 +1,7 @@
 2008-06-14  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_surface.c: rename OpenFile before include rubyio.h.
+
 	* NEWS: add an entry for 1.6.2.
 
 	* pkg-config.rb: work with ruby 1.9.
